--- a/src/collated/A0133915H.md
+++ b/src/collated/A0133915H.md
@@ -3,7 +3,6 @@
 ``` java
 public class MainApp extends Application {
 	private Stage primaryStage;
-	private BorderPane rootLayout;
 
 	private static ObservableList<Task> taskList;
 	private static ObservableList<String> todayTaskList;
@@ -13,12 +12,11 @@ public class MainApp extends Application {
 	public MainApp() {
 	}
 
-	 
 	public ObservableList<Task> getTaskData() {
 		ArrayList<Task> tasks = LogicClass.getTaskList();
 		for (int i = 0; i < tasks.size(); i++) {
 			System.out.println(tasks.get(i).getName());
-		} 
+		}
 		for (int i = 0; i < tasks.size(); i++) {
 			tasks.get(i).setTaskNumber(i + 1);
 		}
@@ -26,73 +24,98 @@ public class MainApp extends Application {
 		return taskList;
 	}
 
-	 
-	public ObservableList<String> getTodayTasks(){
+	public ObservableList<String> getTodayTasks() {
 		ArrayList<String> todayTasks = LogicClass.getTodayTasks();
 		todayTaskList = FXCollections.observableArrayList(todayTasks);
 		return todayTaskList;
 	}
-	
+
 	@Override
 	public void start(Stage primaryStage) {
 		try {
+
+			Button btn = new Button();
+			btn.setText("Help");
+			btn.setOnAction(new EventHandler<ActionEvent>() {
+				@Override
+				public void handle(ActionEvent event) {
+					indexHelp();
+				}
+			});
+
+			BorderPane rootLayout = new BorderPane();
+
+			rootLayout.setTop(btn);
 			this.primaryStage = primaryStage;
 			this.primaryStage.setTitle("TaskBomber");
 
-			initRootLayout();
-			logger.log(Level.INFO, "RootLayout is initiated.");
-
-			showTaskBomberOverview();
-			logger.log(Level.INFO, "The view is generated.");
-		} catch (Exception e) {
-			System.out.println("cannot initiate the view.");
-		}
-	}
-
-	 
-	/**
-	 * Initializes the root layout.
-	 */
-	public void initRootLayout() {
-		try {
-			// Load root layout from fxml file.
-			FXMLLoader loader = new FXMLLoader();
-			loader.setLocation(MainApp.class.getResource("RootLayout.fxml"));
-			rootLayout = (BorderPane) loader.load();
-
-			// Show the scene containing the root layout.
-			Scene scene = new Scene(rootLayout);
-			primaryStage.setScene(scene);
-			primaryStage.show();
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
-	}
-
-	 
-	/**
-	 * Shows the person overview inside the root layout.
-	 */
-	public void showTaskBomberOverview() {
-		try {
-			// Load person overview.
 			FXMLLoader loader = new FXMLLoader();
 			loader.setLocation(MainApp.class.getResource("TaskView.fxml"));
 			AnchorPane taskBomberOverview = (AnchorPane) loader.load();
 
 			// Set person overview into the center of root layout.
 			rootLayout.setCenter(taskBomberOverview);
-
 			TaskViewController controller = loader.getController();
-			
-			controller.setMainApp(this);
 
-		} catch (IOException e) {
-			e.printStackTrace();
+			controller.setMainApp(this);
+			logger.log(Level.INFO, "RootLayout is initiated.");
+
+			Scene scene = new Scene(rootLayout);
+			primaryStage.setScene(scene);
+			primaryStage.show();
+
+			logger.log(Level.INFO, "The view is generated.");
+
+		} catch (Exception e) {
+			logger.log(Level.SEVERE, null, e);
 		}
 	}
 
-	 
+	public void indexHelp() {
+		Image image = new Image("gui/help/Index.PNG");
+		ImageView imageView = new ImageView();
+		imageView.setImage(image);
+		imageView.setPreserveRatio(true);
+
+		ScrollPane secondaryLayout = new ScrollPane();
+		secondaryLayout.setContent(imageView);
+
+		Scene secondScene = new Scene(secondaryLayout, 800, 450);
+		Stage secondStage = new Stage();
+		secondStage.setTitle("Help");
+		secondStage.setScene(secondScene);
+
+		imageView.fitWidthProperty().bind(secondStage.widthProperty());
+		// Set position of second window, related to primary window.
+		secondStage.setX(primaryStage.getX() + 200);
+		secondStage.setY(primaryStage.getY() + 150);
+
+		secondStage.show();
+	}
+
+	public void sos() {
+		Image image = new Image("gui/help/SOS.PNG");
+		ImageView imageView = new ImageView();
+		imageView.setImage(image);
+		imageView.setPreserveRatio(true);
+
+		ScrollPane thirdLayout = new ScrollPane();
+		thirdLayout.setContent(imageView);
+
+		Scene thirdScene = new Scene(thirdLayout, 800, 450);
+		Stage thirdStage = new Stage();
+		thirdStage.setTitle("SOS");
+		thirdStage.setScene(thirdScene);
+
+		imageView.fitWidthProperty().bind(thirdStage.widthProperty());
+
+		// Set position of second window, related to primary window.
+		thirdStage.setX(primaryStage.getX() + 200);
+		thirdStage.setY(primaryStage.getY() + 150);
+
+		thirdStage.show();
+	}
+
 	/**
 	 * Returns the main stage.
 	 * 
@@ -103,7 +126,6 @@ public class MainApp extends Application {
 		return primaryStage;
 	}
 
-	 
 	public static void main(String[] args) {
 		launch(args);
 	}
@@ -113,6 +135,9 @@ public class MainApp extends Application {
 ###### gui\TaskViewController.java
 ``` java
 public class TaskViewController {
+
+	private final KeyCombination crtlZ = new KeyCodeCombination(KeyCode.Z, KeyCombination.CONTROL_DOWN);
+	private final KeyCombination crtlY = new KeyCodeCombination(KeyCode.Y, KeyCombination.CONTROL_DOWN);
 
 	@FXML
 	private TextField txtCommandInput;
@@ -163,26 +188,60 @@ public class TaskViewController {
 
 	public void enterCommand(KeyEvent event) {
 		if (event.getCode() == KeyCode.ENTER) {
-			if (txtCommandInput.getText() == null || txtCommandInput.getText().isEmpty()) {
-				taskTableView.setItems(mainApp.getTaskData());
+			enterKeyEvent();
+		} else if (event.getCode() == KeyCode.UP) {
+			upKeyEvent();
+		} else if (event.getCode() == KeyCode.DOWN) {
+			downKeyEvent();
+		} else if (crtlZ.match(event)) {
+			controlZKeyEvent();
+		} else if (crtlY.match(event)) {
+			controlYKeyEvent();
+		}
+	}
+
+	private void controlYKeyEvent() {
+		execute("redo");
+	}
+
+	private void controlZKeyEvent() {
+		execute("undo");
+	}
+
+	private void downKeyEvent() {
+		// TODO Auto-generated method stub
+
+	}
+
+	private void upKeyEvent() {
+		// TODO Auto-generated method stub
+
+	}
+
+	private void enterKeyEvent() {
+		if (txtCommandInput.getText() == null || txtCommandInput.getText().isEmpty()) {
+			taskTableView.setItems(mainApp.getTaskData());
+		} else {
+			if (txtCommandInput.getText().equalsIgnoreCase("help")) {
+				mainApp.indexHelp();
+			} else if (txtCommandInput.getText().equalsIgnoreCase("sos")) {
+				mainApp.sos();
 			} else {
 				String input = txtCommandInput.getText().trim();
-				// logger.log(Level.INFO, "Here comes a command.");
-				CommandPackage cmdPack = cmdParser.getCommandPackage(input);
-				// logger.log(Level.INFO, "CommandParser parses the command.");
-				assert (cmdPack != null);
-				// String feedback =
-				logic.executeCommand(cmdPack);
-//				if (feedback.compareToIgnoreCase("help") == 0) {
-//
-//				}
-				// logger.log(Level.INFO, "Logic executes the command.");
-				// every time when user click "enter", redisplay the task list
-				taskTableView.setItems(mainApp.getTaskData());
-				logger.log(Level.INFO, "Update the table view.");
-				txtCommandInput.clear();
+				logger.log(Level.INFO, "Here comes a command.");
+				execute(input);
 			}
+			txtCommandInput.clear();
 		}
+	}
+
+	private void execute(String input) {
+		CommandPackage cmdPack = cmdParser.getCommandPackage(input);
+		logger.log(Level.INFO, "CommandParser parses the command.");
+		assert (cmdPack != null);
+		logic.executeCommand(cmdPack);
+		taskTableView.setItems(mainApp.getTaskData());
+		logger.log(Level.INFO, "Update the table view.");
 	}
 
 	/**
@@ -192,12 +251,10 @@ public class TaskViewController {
 	 */
 
 	public void setMainApp(MainApp mainApp) {
-		System.out.println("set Main app.");
 		this.mainApp = mainApp;
 		logger.log(Level.INFO, "Set MainApp.");
 		// Add observable list data to the table
 		taskTableView.setItems(mainApp.getTaskData());
-		todayTasksView.setItems(mainApp.getTodayTasks());
 	}
 }
 ```
@@ -209,11 +266,14 @@ public class Task implements Comparable<Task> {
 	private DateTime endTime = null;
 	private Integer priority = null;
 	private Integer taskNum = null;
-	
+
+	//@author A0133949U
+
 	public Task(String name) {
 		this.name = name;
 	}
 
+	//@author A0133949U
 	public Task(String name, DateTime start, DateTime end, int pri) {
 		this.name = name;
 		this.startTime = start;
@@ -221,30 +281,37 @@ public class Task implements Comparable<Task> {
 		this.priority = pri;
 	}
 
+	//@author A0133949U
 	public String getName() {
 		return this.name;
 	}
 
+	//@author A0133949U
 	public DateTime getStartTime() {
 		return this.startTime;
 	}
 
+	//@author A0133949U
 	public DateTime getEndTime() {
 		return this.endTime;
 	}
 
+	//@author A0133949U
 	public Integer getPriority() {
 		return this.priority;
 	}
 
+	//@author A0133949U
 	public Integer getTaskNum() {
 		return this.taskNum;
 	}
 
+	//@author A0133949U
 	public void setStartTime(DateTime start) {
 		this.startTime = start;
 	}
 
+	//@author A0133949U
 	public void setEndTime(DateTime end) {
 		this.endTime = end;
 	}
@@ -262,14 +329,17 @@ public class Task implements Comparable<Task> {
 		}
 	}
 
+	//@author A0133949U
 	public void setTaskNumber(Integer taskNumber) {
 		this.taskNum = taskNumber;
 	}
 
+	//@author A0133949U
 	public void setTaskName(String name) {
 		this.name = name;
 	}
 
+	//@author A0133949U
 	public boolean containKeyword(String keyword) {
 		if (name.matches(".*\\b" + keyword + "\\b.*")) {
 			return true;
@@ -290,6 +360,7 @@ public class Task implements Comparable<Task> {
 	}
 
 	@Override
+	//@author A0133949U
 	public int compareTo(Task oTask) {
 		int result = this.name.compareToIgnoreCase(oTask.name);
 		if (result < 0)
@@ -302,6 +373,7 @@ public class Task implements Comparable<Task> {
 	}
 
 	@Override
+	//@author A0133949U
 	public String toString() {
 		return name;
 	}
