--- a/src/collated/A0133948W.md
+++ b/src/collated/A0133948W.md
@@ -3,16 +3,27 @@
 ``` java
 public class PriorityTaskList {
     
-	private static ArrayList<Task> p1 = new ArrayList<Task>();
-	private static ArrayList<Task> p2 = new ArrayList<Task>();
-	private static ArrayList<Task> p3 = new ArrayList<Task>();
-	private static ArrayList<Task> p4 = new ArrayList<Task>();
+	private ArrayList<Task> p1 = new ArrayList<Task>();
+	private ArrayList<Task> p2 = new ArrayList<Task>();
+	private ArrayList<Task> p3 = new ArrayList<Task>();
+	private ArrayList<Task> p4 = new ArrayList<Task>();
+	private static PriorityTaskList priorityList = null;
 	
-	public PriorityTaskList() {
-		// TODO Auto-generated constructor stub
+	private PriorityTaskList(){
+		this.p1 = new ArrayList<Task>();
+		this.p2 = new ArrayList<Task>();
+		this.p3 = new ArrayList<Task>();
+		this.p4 = new ArrayList<Task>();
 	}
 	
-	public static void addToPL(Task t){
+	public static PriorityTaskList getInstance(){
+		if(priorityList == null){
+			priorityList = new PriorityTaskList();
+		}
+		return priorityList;
+	}
+	
+	public void addToPL(Task t){
 		if(t.getPriority() == null){
 			p4.add(t);
 		}else if(t.getPriority() == 1){
@@ -24,7 +35,7 @@ public class PriorityTaskList {
 		}
 	}
 	
-	public static void deleteFromPL(Task t){
+	public void deleteFromPL(Task t){
 	    if(t.getPriority() == null){
 	    	for (int i = 0; i<p4.size(); i++){
 				if(p4.get(i).getName().equalsIgnoreCase(t.getName())){
@@ -56,26 +67,28 @@ public class PriorityTaskList {
 		}
 	}
 	
-	public static void clear(){
+	public void clear(){
 		p1.clear();
 		p2.clear();
 		p3.clear();
 		p4.clear();
 	}
 
-	public static ArrayList<Task> getP1() {
+	public ArrayList<Task> getP1() {
 		return p1;
 	}
-	public static ArrayList<Task> getP2() {
+	
+	public ArrayList<Task> getP2() {
 		return p2;
 	}
-	public static ArrayList<Task> getP3() {
+	
+	public ArrayList<Task> getP3() {
 		return p3;
 	}
-	public static ArrayList<Task> getP4() {
+	
+	public ArrayList<Task> getP4() {
 		return p4;
 	}
-
 }
 ```
 ###### logic\Searcher.java
@@ -83,6 +96,7 @@ public class PriorityTaskList {
 public class Searcher {
 	
 	private static Searcher searcher = null;
+	
 	private Searcher(){
 	}
 	
@@ -90,9 +104,9 @@ public class Searcher {
 		if(searcher == null){
 			searcher = new Searcher();
 		}
-		return searcher;
-		
+		return searcher;	
 	}
+	
 	public ArrayList<Task> search(Task target){
 		ArrayList<Task> result = new ArrayList<Task>();
 		if(target.getStartTime() != null){
@@ -116,7 +130,6 @@ public class Searcher {
 		return result;
 
 	}
-	
 	public ArrayList<Task> searchKeyword(String key, ArrayList<Task> sample){
 		int i, j;
 		String[] keywords = key.split(" ");
@@ -139,11 +152,11 @@ public class Searcher {
 	public ArrayList<Task> searchPriority(int priority){
 		ArrayList<Task> result = new ArrayList<Task>();
 		if(priority == 1){
-			result.addAll(PriorityTaskList.getP1());
+			result.addAll(PriorityTaskList.getInstance().getP1());
 		}else if(priority == 2){
-			result.addAll(PriorityTaskList.getP2());
+			result.addAll(PriorityTaskList.getInstance().getP2());
 		}else if(priority == 3){
-			result.addAll(PriorityTaskList.getP3());
+			result.addAll(PriorityTaskList.getInstance().getP3());
 		}
 		return result;
 	}
@@ -160,13 +173,7 @@ public class Searcher {
 		}
 		return sample;		
 	}
-	/*
-	public static ArrayList<Task> searchDate(DateTime date){
-		ArrayList<Task> result = new ArrayList<Task>();
-		searchFromStart(TimeLine.getStarttimeLine(), date, result);
-		searchFromEnd(TimeLine.getEndtimeLine(), date, result);
-		return result;
-	}*/
+	
 	public ArrayList<Task> searchDate(DateTime start, DateTime end){
 		ArrayList<Task> result1 = new ArrayList<Task>(TimeLine.getInstance().getStarttimeLine());
 		ArrayList<Task> result2 = new ArrayList<Task>(TimeLine.getInstance().getEndtimeLine());
@@ -181,54 +188,16 @@ public class Searcher {
 					result1.remove(i);
 					i--;
 				}
-				
 			}
 		}
 		for(int j = 0; j < result2.size(); j++){
 		    t = result2.get(j);
-		    if((t.getEndTime().compareTo(start) > 0) && (t.getEndTime().compareTo(end) < 0)){
+		    if((t.getEndTime().compareTo(start) >= 0) && (t.getEndTime().compareTo(end) <= 0)){
 		    	result1.add(t);
 		    }
 		}
 		return result1;
 	}
-	/*
-	private static void searchFromStart(ArrayList<Task> timeLine, DateTime time, ArrayList<Task> result){
-		int index1 = TimeLine.findPositionStart(timeLine, time, 0, timeLine.size());
-		
-		if(index1 == 0){
-		}else{
-			index1 --;
-			int index2 = index1 + 1;
-			while((index1 >= 0)&&(timeLine.get(index1).getStartTime().compareTo(time) == 0)){
-				result.add(timeLine.get(index1));
-				index1--;
-			}
-			while((index2 < timeLine.size())&&(timeLine.get(index2).getStartTime().compareTo(time) == 0)){
-				result.add(timeLine.get(index2));
-				index2++;
-			}
-		}
-	}
-	
-	private static void searchFromEnd(ArrayList<Task> timeLine, DateTime time, ArrayList<Task> result){
-		int index1 = TimeLine.findPositionEnd(timeLine, time, 0, timeLine.size());
-		
-		if(index1 == 0){
-		}else{
-			index1 --;
-			int index2 = index1 + 1;
-			while((index1 >= 0)&&(timeLine.get(index1).getStartTime().compareTo(time) == 0)){
-				result.add(timeLine.get(index1));
-				index1--;
-			}
-			while((index2 < timeLine.size())&&(timeLine.get(index2).getStartTime().compareTo(time) == 0)){
-				result.add(timeLine.get(index2));
-				index2++;
-			}
-		}
-	}*/
-	
 }
 ```
 ###### logic\SystemTest.java
@@ -236,7 +205,8 @@ public class Searcher {
 public class SystemTest {
 
 	@Test
-	public void test() {
+	public void test1() {
+		//test: add, update, delete
 		CommandParser cmp = new CommandParser();
 		CommandPackage cmd = cmp.getCommandPackage("add meeting 9-Oct");
 		LogicClass lg = LogicClass.getInstance();
@@ -249,8 +219,56 @@ public class SystemTest {
 		cmd = cmp.getCommandPackage("delete party");
 		lg.executeCommand(cmd);
 		assertEquals(LogicClass.getTaskList().size(), size - 1);
-		/*assertEquals(LogicClass.getInstance(null).delete("meeting").getName(), "meeting");
-		cmd = cmp.getCommandPackage("")*/
+	}
+	
+	@Test
+	public void test2() {
+		//test: clear, undo, redo
+		CommandParser cmp = new CommandParser();
+		CommandPackage cmd = cmp.getCommandPackage("clear");
+		LogicClass lg = LogicClass.getInstance();
+		lg.executeCommand(cmd);
+		int size = LogicClass.getTaskList().size();
+		assertEquals(0, size);
+		cmd = cmp.getCommandPackage("add meeting 9-Oct");
+		lg.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("undo");
+		lg.executeCommand(cmd);
+		size = LogicClass.getTaskList().size();
+		assertEquals(0, size);
+		cmd = cmp.getCommandPackage("redo");
+		lg.executeCommand(cmd);
+		size = LogicClass.getTaskList().size();
+		assertEquals(1, size);
+	}
+	
+	@Test
+	public void test3() {
+		//test: sort, search
+		CommandParser cmp = new CommandParser();
+		CommandPackage cmd = cmp.getCommandPackage("add party 8-Oct #3");
+		LogicClass lg = LogicClass.getInstance();
+		lg.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting 9-Oct #2");
+		lg.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("sort name");
+		lg.executeCommand(cmd);
+		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("sort time");
+		lg.executeCommand(cmd);
+		assertEquals("party", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("sort priority");
+		lg.executeCommand(cmd);
+		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("search meeting");
+		lg.executeCommand(cmd);
+		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("search 8-Oct");
+		lg.executeCommand(cmd);
+		assertEquals("party", LogicClass.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("search #2");
+		lg.executeCommand(cmd);
+		assertEquals("meeting", LogicClass.getTaskList().get(0).getName());	
 	}
 
 }
@@ -275,12 +293,12 @@ public class TimeLine {
 		}
 		return timeline;
 	}
+	
 	public void addToTL(Task t){
 		if(t.getStartTime() != null){
 			DateTime time = t.getStartTime();		
 			int index = findPositionStart(startTimeLine, time, 0, startTimeLine.size());
-			startTimeLine.add(index, t);
-			
+			startTimeLine.add(index, t);			
 		}
 		else if(t.getEndTime() != null){
 			DateTime time = t.getEndTime();
@@ -295,12 +313,9 @@ public class TimeLine {
 		if(right == 0){
 			return 0;
 		}
-		int mid = (left + right)/2;
-		
+		int mid = (left + right)/2;	
 	    if(timeLine.get(mid).getStartTime().compareTo(time) < 0){
-	    	
 	    	if(mid == left){
-	    		
 	    		return left + 1;
 	    	}else{
 	    		return findPositionStart(timeLine, time, mid, right);
@@ -321,11 +336,8 @@ public class TimeLine {
 			return 0;
 		}
 		int mid = (left + right)/2;
-		
-	    if(timeLine.get(mid).getEndTime().compareTo(time) < 0){
-	    	
+	    if(timeLine.get(mid).getEndTime().compareTo(time) < 0){	
 	    	if(mid == left){
-	    		
 	    		return left + 1;
 	    	}else{
 	    		return findPositionEnd(timeLine, time, mid, right);
@@ -341,16 +353,12 @@ public class TimeLine {
 		}
 	}
 	
-	
-
-	
 	public void deleteFromTL(Task t){
 		if(t.getStartTime() != null){
 			DateTime time = t.getStartTime();
 			String name = t.getName();	
 			removeStart(startTimeLine, time, name);
 		}
-		
 		else if(t.getEndTime() != null){
 			DateTime time = t.getEndTime();
 			String name = t.getName();	
@@ -359,6 +367,7 @@ public class TimeLine {
 			floatTimeLine.remove(t);
 		}
 	}
+	
 	public void removeStart(ArrayList<Task> timeLine, DateTime time, String name){
 		int index1 = findPositionStart(timeLine, time, 0, timeLine.size()) - 1;
 		int index2 = index1 + 1;
@@ -376,6 +385,7 @@ public class TimeLine {
 			timeLine.remove(index2);
 		}
 	}
+	
 	public void removeEnd(ArrayList<Task> timeLine, DateTime time, String name){
 		int index1 = findPositionEnd(timeLine, time, 0, timeLine.size()) - 1;
 		int index2 = index1 + 1;
@@ -419,15 +429,130 @@ public class TimeLine {
 public class TimeSearchTest {
 
 	@Test
-	public void test() {
+	public void test1() {
+		//test: event task 
 		Task a = new Task("A");
 		a.setStartTime(new DateTime(2014, 1, 1, 1, 1));
 		a.setEndTime(new DateTime(2014, 1, 2, 1, 1));
 		Task b = new Task("B");
 		b.setStartTime(new DateTime(2014, 2, 1, 1, 1));
+		b.setEndTime(new DateTime(2014, 2, 2, 1, 1));
+		TimeLine.getInstance().clear();
 		TimeLine.getInstance().addToTL(a);
 		TimeLine.getInstance().addToTL(b);
-		assertEquals(Searcher.getInstance().searchDate(new DateTime(2014,1,1,1,1), new DateTime(2014,1,1,2,1)).get(0).getName(), "A");
+		assertEquals("A",Searcher.getInstance().searchDate(new DateTime(2014,1,1,1,1), new DateTime(2014,1,1,2,1)).get(0).getName());
+	}
+
+	@Test
+	public void test2() {
+		//test: deadline Task in range
+		Task c = new Task("C");
+		c.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		c.setEndTime(new DateTime(2014, 1, 2, 1, 1));
+		Task d = new Task("D");
+		d.setEndTime(new DateTime(2014, 1, 3, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(c);
+		TimeLine.getInstance().addToTL(d);
+		assertEquals("D",Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,1,2)).get(0).getName());
+	}
+	
+	public void test3() {
+		//test: deadline Task out of range
+		Task c = new Task("C");
+		c.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		c.setEndTime(new DateTime(2014, 1, 2, 1, 1));
+		Task d = new Task("D");
+		d.setEndTime(new DateTime(2014, 2, 3, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(c);
+		TimeLine.getInstance().addToTL(d);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,1,2)).size());
+	}
+
+	@Test
+	public void test4() {
+		//test: task with only start time which is before the start time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals("F",Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).get(0).getName());
+	}
+
+	@Test
+	public void test5() {
+		//test: task with only start time which is after the start time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 2, 2, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals("F",Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).get(0).getName());
+	}
+	
+	@Test
+	public void test6() {
+		//test: task with only start time which is after the end time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 3, 2, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).size());
+	}
+	
+	@Test
+	public void test7() {
+		//test: floating task
+		Task g = new Task("G");
+		g.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		g.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task h = new Task("H");
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(g);
+		TimeLine.getInstance().addToTL(h);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).size());
+	}
+}
+```
+###### storage\ReadAndWriteTest.java
+``` java
+public class ReadAndWriteTest {
+
+	@Test
+	public void test() {
+		Storage storage = Storage.getInstance();
+		ArrayList<Task> a = new ArrayList<Task>();
+		ArrayList<Task> c = new ArrayList<Task>();
+		for(int i = 1; i < 10; i++){
+			Task t1 = new Task("test" + i);
+			t1.setStartTime(new DateTime(2016,i,1,1,1));
+			t1.setEndTime(new DateTime(2016,i+1,1,1,1));
+			t1.setPriority("1");
+			a.add(t1);
+		}
+		storage.read();
+		storage.write(a,c);
+		ArrayList<Task> b = storage.read().get(0);
+		System.out.println(a);
+		System.out.println(b);
+		for(int i = 0; i < 9; i++){
+			assertEquals(a.get(i).getName(), b.get(i).getName());
+			assertEquals(a.get(i).getStartTime(), b.get(i).getStartTime());
+			assertEquals(a.get(i).getEndTime(), b.get(i).getEndTime());
+			assertEquals(a.get(i).getPriority(), b.get(i).getPriority());
+		}
 	}
 
 }
@@ -438,9 +563,17 @@ public class SetPathTest {
 
 	@Test
 	public void test() {
-		ArrayList<Task> a = Storage.getInstance().read();
-		Storage.getInstance().setPath("Task_Bomber_.txt");
-		assertEquals(Storage.getInstance().read(), a);
+		
+		ArrayList<Task> a = new ArrayList<Task>();
+		ArrayList<Task> c = new ArrayList<Task>();
+		Task t = new Task("test");
+		a.add(t);
+		Storage.getInstance().write(a,c);
+		Storage.getInstance().setPath("Task_Bomber.txt");
+		ArrayList<Task> b = Storage.getInstance().read().get(0);
+		System.out.println(a);
+		System.out.println(b);
+		assertEquals(b.get(0).getName(), a.get(0).getName());
 		
 	}
 
@@ -451,7 +584,7 @@ public class SetPathTest {
 public class Storage {
 
 	private static File filePath = new File("filePath");
-	private static File userFile;
+	private static File userFile = new File("taskBomber.txt");
 	private static Storage storage = null;
 	
 	private Storage(){
@@ -466,8 +599,9 @@ public class Storage {
 		}
 	}
 
-	public ArrayList<Task> read() {
+	public ArrayList<ArrayList<Task>> read() {
 		ArrayList<Task> taskList = new ArrayList<Task>();
+		ArrayList<Task> doneList = new ArrayList<Task>();
 		try {
 			
 			filePath.createNewFile();
@@ -483,11 +617,15 @@ public class Storage {
 			fr = new FileReader(userFile);
 			buff = new BufferedReader(fr);
 			String content;
+			boolean done = false;
 
 			// read in original content in the file
 			//System.out.println("Reading file.");
 			while ((content = buff.readLine()) != null) {
-
+                if(content.equals("done:")){
+                	done = true;
+                	continue;
+                }
 				String[] taskInfo = content.split("\\|");
 				Task taskToRead = new Task(taskInfo[0]);
 
@@ -513,7 +651,13 @@ public class Storage {
 				if (taskInfo[3] != null && taskInfo[3] != "") {
 					taskToRead.setPriority(taskInfo[3]);
 				}
-				taskList.add(taskToRead);
+				
+				if(done == false){
+					taskList.add(taskToRead);
+				}else{
+					doneList.add(taskToRead);
+				}
+				
 			}
 			buff.close();
 			fr.close();
@@ -522,10 +666,15 @@ public class Storage {
 			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
-		return taskList;
+		
+		
+		ArrayList<ArrayList<Task>> result = new ArrayList<ArrayList<Task>>();
+		result.add(taskList);
+		result.add(doneList);
+		return result;
 	}
 
-	public void write(ArrayList<Task> taskList) {
+	public void write(ArrayList<Task> taskList, ArrayList<Task> doneList) {
 		try {
 			FileWriter fw = new FileWriter(userFile, false);
 			BufferedWriter buff = new BufferedWriter(fw);
@@ -552,9 +701,38 @@ public class Storage {
 				content += "|";
 
 				content += taskToWrite.getPriority();
-				if (i != (taskList.size() - 1)) {
-					content += "\n";
+				
+				content += "\n";
+				
+				// System.out.println("Writing into file.");
+
+			}
+			content += "done:";
+			content += "\n";
+			for (int i = 0; i < doneList.size(); i++) {
+				taskToWrite = doneList.get(i);
+
+				content += taskToWrite.getName();
+				content += "|";
+
+				if (taskToWrite.getStartTime() == null) {
+					content += " ";
+				} else {
+					content += taskToWrite.getStartTime().toString();
 				}
+				content += "|";
+
+				if (taskToWrite.getEndTime() == null) {
+					content += " ";
+				} else {
+					content += taskToWrite.getEndTime().toString();
+				}
+				content += "|";
+
+				content += taskToWrite.getPriority();
+				
+				content += "\n";
+				
 				// System.out.println("Writing into file.");
 
 			}
@@ -571,9 +749,10 @@ public class Storage {
 		try{
 			File newPath = new File(path);
 			newPath.createNewFile();
-			write(read());
+			ArrayList<ArrayList<Task>> content = read();
 			userFile.delete();
 			userFile = newPath;
+			write(content.get(0), content.get(1));
 			FileWriter fw = new FileWriter(filePath, false);
 			BufferedWriter buff = new BufferedWriter(fw);
 			buff.write(path);
